# sam-react-on-fastapi

./: .gitignore  .mise.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  template.yaml
backend/: README.md  main.py  openapi.json  pyproject.toml
backend/app/api/: __init__.py  backend.py
backend/app/core/: config.py  db.py  models.py
backend/scripts/: export_openapi.py
docs/: arch.drawio
frontend/: orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/model/: deleteTodoApiTodosTodoIdDelete200.ts  hTTPValidationError.ts  healthCheckApiHealthGet200.ts  index.ts  todoCreate.ts  todoCreateDescription.ts  todoResponse.ts  todoResponseDescription.ts  todoResponseUpdatedAt.ts  todoUpdate.ts  todoUpdateCompleted.ts  todoUpdateDescription.ts  todoUpdateTitle.ts  validationError.ts  validationErrorLocItem.ts
